# ICONIA-CI

./: .env.example  .gitattributes  .gitignore  .preflightignore  CHANGELOG.md  README.md  admin2.json  admin3.json  admindep.json  adminfix.json  adminunit.json  allenvs.json  aws-infra.md  bypass.json  check.json  corsfix.json  diag.json  diag2.json  envfix.json  envfix2.json  final.json  final2.json  fixmem.json  hw-fw.md  integration-reviewer.md  jwtkeys.json  kek.json  loginerr.json  manualrun.json  overcommit.json  persona-ai.md  product-experience.md  recovery.json  recovery2.json  recovery3.json  redeploy.json  redeploy2.json  redisurl.json  rn-mobile.md  sessdiag.json  (+3 more)
.github/: CODEOWNERS
stress-test/: .env.example  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
stress-test/.github/workflows/: stress-test.yml
stress-test/agents/: __init__.py  base.py  basic_agents.py  conditional_agents.py
stress-test/load/: locustfile.py
stress-test/load/k6/: stress.js
stress-test/monitoring/: loki-config.yml  otel-collector.yml  prometheus.yml
stress-test/reports/: __init__.py  generator.py
stress-test/scripts/: orchestrate-load.py  run-stress.sh
stress-test/simulator/: __init__.py  event_types.py  orchestrator.py  virtual_events.py
stress-test/tests/: test_agents.py  test_reports.py  test_virtual_events.py
stress-test/workers/: __init__.py  admin_verification_worker.py  app_verification_worker.py  aws_load_worker.py  chaos_injection_worker.py  gemini_validation_worker.py  metrics_collector.py
(+228 files in other folders)
