[project]
name = "iconia-stress-test"
version = "0.1.0"
description = "ICONIA E2E Wide Stress Test Platform (HW-excluded)"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.10",
  "httpx>=0.27",
  "websockets>=13",
  "prometheus-client>=0.21",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp>=1.27",
  "google-generativeai>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
